fix: z-index problem

--- a/starter-kits/nextjs-starter-kit/components/TextEditor/Toolbar.module.css
+++ b/starter-kits/nextjs-starter-kit/components/TextEditor/Toolbar.module.css
@@ -36,7 +36,7 @@
 
 .toolbarPopoverBar {
   display: flex;
-  gap: var(--space-3)
+  gap: var(--space-3);
 }
 
 .toolbarPopoverInput {
